# figgie-insights

./: Figgie.ipynb  FiggieGame.py  Figgie_Simple_Simulation.ipynb  Figgie_Statistical_Analysis.ipynb  README.md  Understanding Figgie.md  fixed.txt  index.html  remove_every_other_line.py  styles.css
server/: Cargo.toml  docker-compose.yml
server/migrations/: 20240001_create_players.sql  20240002_create_games.sql  20240003_create_game_players.sql  20240004_create_orders.sql  20240005_create_trades.sql  20240006_create_game_events.sql
server/src/: config.rs  error.rs  main.rs  state.rs
server/src/bots/: stub.rs
server/src/game/: dealer.rs  engine.rs  mod.rs  order_book.rs  scoring.rs
server/src/handlers/: games.rs  mod.rs  players.rs  ws.rs
server/src/models/: card.rs  game.rs  mod.rs  order.rs  player.rs  trade.rs
server/src/ws/: broker.rs  messages.rs  mod.rs  session.rs
